# routes/index.js
@@ -8,6 +8,7 @@ const api = express.Router()
 api.get('/users', userCtrl.getUsers)
 //api.get('/users', userCtrl.getUser1)
 api.get('/users/:_id', userCtrl.getUser2)
+api.get('/listusers', userCtrl.getUsers)
 api.post('/users', userCtrl.createUser)
 api.put('/users/:_id', userCtrl.updateUser)
 api.delete('/users/:_id', userCtrl.deleteUser)
